♻️ Clear SonarQubeCloud issues